--- a/web04/commu_sub01.html
+++ b/web04/commu_sub01.html
@@ -142,7 +142,7 @@
                 <a href=""><img src="./img/btn-chat-kakao.png" alt=""></a>
                 <button type="button" onclick="$('html, body').animate({scrollTop: 0}, 300);"><img src="./img/btn_top.png" alt="">TOP</button>
             </div>
-        </header>
+        </header>s
         <div class="commu">
             <div class="subTit">
                 <h2>커뮤티니</h2>
