--- a/web04/cure.html
+++ b/web04/cure.html
@@ -85,40 +85,44 @@
                     <li>
                         <a href="intro.html">병원소개</a>
                         <ul class="hd_subpage">
-                            <li><a href="intro_sub01.html">병원 이야기</a></li>
-                            <li><a href="intro_sub02.html">의료진 소개</a></li>
+                            <li><a href="hospital.html">병원 이야기</a></li>
+                            <li><a href="doctor.html">의료진 소개</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="info.html">진료안내</a>
                         <ul class="hd_subpage">
-                            <li><a href="info_sub01.html">진료안내</a></li>
-                            <li><a href="info_sub02.html">입퇴원안내</a></li>
-                            <li><a href="info_sub03.html">서류발급안내</a></li>
+                            <li><a href="waist.html">허리</a></li>
+                            <li><a href="neck.html">목</a></li>
+                            <li><a href="shoulder.html">어깨</a></li>
+                            <li><a href="knee.html">무릎</a></li>
+                            <li><a href="24.html">팔꿈치</a></li>
+                            <li><a href="hand.html">손/발</a></li>
+                            <li><a href="head.html">두통</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="medi1.html">치료1</a>
+                        <a href="medi1.html">치료</a>
                         <ul class="hd_subpage">
-                            <li><a href="medi1_sub01.html">서브1</a></li>
-                            <li><a href="medi1_sub02.html">서브2</a></li>
-                            <li><a href="medi1_sub03.html">서브3</a></li>
+                            <li><a href="prolo.html">프롤로치료</a></li>
+                            <li><a href="28.html">체외충격파치료</a></li>
+                            <li><a href="34.html">도수치료</a></li>
+                            <li><a href="35.html">물리치료</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="medi2.html">치료2</a>
+                        <a href="medi2.html">주사</a>
                         <ul class="hd_subpage">
-                            <li><a href="medi2_sub01.html">서브1</a></li>
-                            <li><a href="medi2_sub02.html">서브2</a></li>
-                            <li><a href="medi2_sub03.html">서브3</a></li>
+                            <li><a href="medi2_sub01.html">마이어스칵테일</a></li>
+                            <li><a href="medi2_sub02.html">마늘주사</a></li>
+                            <li><a href="medi2_sub03.html">멀티블루5주</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="commu.html">커뮤니티</a>
                         <ul class="hd_subpage">
-                            <li><a href="commun_sub01.html">공지사항</a></li>
-                            <li><a href="commun_sub02.html">문의사항</a></li>
-                            <li><a href="commun_sub03.html">치료후기</a></li>
+                            <li><a href="commu_sub01.html">공지사항</a></li>
+                            <li><a href="subpage.html">증명서발급안내</a></li>
                         </ul>
                     </li>
                 </ul>
